--- a/html5_css3/desafios/d005/index.html
+++ b/html5_css3/desafios/d005/index.html
@@ -11,7 +11,7 @@
     <h1>Minhas redes sociais</h1>
     <h2>Quem sou eu?</h2>
     <img src="redondo.jpg" alt="eu">
-    <p>Meu nome é Victoria Ferrarese, tenho 19 anos e em breve irei cursar Tecnologia da Informação e trabalhar ( 🙏 amém ). Tenho ma filha de 14 anos ( 😾 )que é muito brava então tenha cuidado com ela. Também conheço uma gatinha muito medrosa e gorda que gosta de carinho na bunda e dos beijos da minha filha brava.</p>
+    <p>Meu nome é Victoria Ferrarese, tenho 19 anos e em breve irei cursar Tecnologia da Informação e trabalhar ( 🙏 amém ).No momento estou aprendendo Html5 e Css3 no Curso em Vídeo.</p>
     <h2>Como falar comigo?</h2>
     <ul>
         <li><img src="instagram editado.png" alt=""><a href="https://www.instagram.com/_vickfeh_/" rel="external" target="_blank"> /_vickfeh_ </a> - Me segue lá, posto uma foto por ano.</li>
